--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./assets/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">  
 </head>
-<body> 
+<body data-spy="scroll" data-offset="50" data-target=".navbar" class="smoothScroll" id="main"> 
   <app-root></app-root>
 </body>
 <script src="./assets/js/vendor/jquery-2.2.4.min.js"></script>
@@ -27,6 +27,7 @@
 <script src="./assets/js/owl.carousel.min.js"></script>						
 <script src="./assets/js/jquery.nice-select.min.js"></script>	
 <script src="./assets/js/jquery.circlechart.js"></script>								
-<script src="./assets/js/mail-script.js"></script>	
+<script src="./assets/js/mail-script.js"></script>
+<script src="./assets/js/spyscroll.js"></script>
 <script src="./assets/js/main.js"></script>	
 </html>
