--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,6 @@
 <script src="./assets/js/jquery.circlechart.js"></script>								
 <script src="./assets/js/mail-script.js"></script>
 <script src="./assets/js/spyscroll.js"></script>
+<script src="./assets/js/counter.js"></script>
 <script src="./assets/js/main.js"></script>	
 </html>
