--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Salespage</title>
+  <title>POSLite - Inventory Management Software</title> 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+  <link rel="icon" type="image/png" href="poslite.png"> 
   <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./assets//css/animate.min.css">
   <link rel="stylesheet" href="./assets/css/bootstrap.css"> 	 
   <link rel="stylesheet" href="./assets/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">  
+  <script src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1"></script>
 </head>
 <body data-spy="scroll" data-offset="50" data-target=".navbar" class="smoothScroll" id="main"> 
+  
   <app-root></app-root>
 </body>
 <script src="./assets/js/vendor/jquery-2.2.4.min.js"></script>
@@ -30,5 +33,6 @@
 <script src="./assets/js/mail-script.js"></script>
 <script src="./assets/js/spyscroll.js"></script>
 <script src="./assets/js/counter.js"></script>
+<script src="./assets/js/wow.min.js"></script>
 <script src="./assets/js/main.js"></script>	
 </html>
