--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>POSLite - Inventory Management Software</title> 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="MQXBWrGo3AkOgbOB9LvSubFrexJLhepr1hiCi1XuSSk" />
   <link rel="icon" type="image/png" href="poslite.png"> 
   <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets//css/animate.min.css">
