--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./assets/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">  
   <script src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1"></script>
-  <script src="https://www.paypal.com/sdk/js?client-id=Ac7Uk-KxIeZFGKTw3VfjlLglhqRmfOjtvzJBEOODgdoIh0YUqnZaPClFmPbetNCbIvFloaAuMZ00_Zc5"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=Ac7Uk-KxIeZFGKTw3VfjlLglhqRmfOjtvzJBEOODgdoIh0YUqnZaPClFmPbetNCbIvFloaAuMZ00_Zc5&currency=PHP"></script>
 </head>
 <body data-spy="scroll" data-offset="50" data-target=".navbar" class="smoothScroll" id="main"> 
     
