fix reloading errors

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./assets/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap" rel="stylesheet">  
   <script src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1"></script>
- 
+  <script src="https://www.paypal.com/sdk/js?client-id=ASMD2Csmo8TLvfZbFTu2Cvik3hVz2KEz5Q8K5rjsPVgPy5COGNWpQWAytyOAlJCD4svAc2amW5lDeaBF&currency=PHP" data-namespace="paypal_sdk"></script>
 </head>
 <body data-spy="scroll" data-offset="50" data-target=".navbar" class="smoothScroll" id="main"> 
     
